--- a/css/header.css
+++ b/css/header.css
@@ -6,7 +6,10 @@ background-color: aqua;}
 .top{width: calc(100% - 160px);
 height: 60px;
 background-color: gray;
-margin: 0 auto;}
+margin: 0 auto;
+display:flex;
+flex-direction:row;
+justify-content: space-between;}
 
 .right{ width: 60%;
 height: 60px;
@@ -18,6 +21,44 @@ justify-content: flex-start;
 align-items: center;}
 
 .right a{ width: fit-content;
+    height: 60px;
 text-align: center;
 background-color: blue;}
+.right .search{width:100%;
+height:60px;
+background-color:lime;}
 
+.right .search form{display: flex;
+flex-direction: row;
+column-gap: 15px;justify-content: flex-start;
+align-items: center;
+width: calc(100% - 60px);
+height: 60px;}
+
+.right .search form input{width:100%;
+height:40px;border:0; outline: unset;}
+
+.top .left{ width:20%;
+height:60px;
+display: flex;
+flex-direction: row;
+column-gap: 15px;
+justify-content: flex-end;
+align-items: center;
+background-color: yellow;
+}
+
+
+top .left a { width:65%;
+height:60px;
+display: flex;
+text-decoration: none;
+flex-direction: row;
+align-items: center;
+}
+
+
+.left span{width:3px;
+    height: 24px;
+background-color: rgba(255, 255, 255, 0.744);
+}
